--- a/src/css/grid.module.css
+++ b/src/css/grid.module.css
@@ -12,28 +12,21 @@
     justify-content: space-between;
 }
 
-.row{
-    width:100%;
-    height:100%;
-    display:flex;
-    justify-content: space-between;
+.table{
+    width:100%;   
+    height: 100%;
+    table-layout: fixed;
 }
 
 .cell{
-    border-top:1px solid rgb(var(--black));
-    border-left:1px solid rgb(var(--black));
-    width:100%;
-    height:100%;
+    border : 1px solid black;
+    text-align: center;
+    font-size: 100px;
 }
 
-.rightDiv{
-    border-right: 1px solid rgb(var(--black));
+.cell p{
+    margin:0px;
 }
-
-.bottomDiv{
-    border-bottom: 1px solid rgb(var(--black));
-}
-
 .gameOverMessage{
     position: absolute;
     font-size:64px;
