--- a/src/css/grid.module.css
+++ b/src/css/grid.module.css
@@ -1,50 +1,64 @@
 .grid {
     position: absolute;
     background-color: rgb(var(--white));
-    width:450px;
-    height:450px;
-    padding:25px;
+    width: 450px;
+    height: 450px;
     left: 50%;
-    top:50%;
+    top: 50%;
     transform: translate(-50%, -50%);
-    display:flex;
+    display: flex;
     flex-direction: column;
     justify-content: space-between;
 }
 
-.table{
-    width:100%;   
+.table {
+    width: 100%;
     height: 100%;
     table-layout: fixed;
 }
 
-.cell{
-    border : 1px solid black;
+.cell {
+    border: 1px solid black;
     text-align: center;
     font-size: 100px;
 }
 
-.cell p{
-    margin:0px;
+.cell p {
+    margin: 0px;
 }
-.gameOverMessage{
+
+.gameOverMessage {
     position: absolute;
-    font-size:64px;
+    font-size: 64px;
     color: rgb(var(--white));
-    left:50%;
-    top:10%;
+    left: 50%;
+    top: 10%;
     transform: translate(-50%, -50%);
     background-color: rgb(var(--red));
     text-align: center;
 }
 
-.gameOverMessage p{
-    margin:0;
+.gameOverMessage p {
+    margin: 0;
 }
 
-.gameOverMessage button{
-    width:200px;
-    height:50px;
-    font-size:25px;
+.gameOverMessage button {
+    width: 200px;
+    height: 50px;
+    font-size: 25px;
 }
 
+@keyframes cellAnim {
+    from{
+        transform: scale(0);
+    }
+    to{
+        transform : scale(1);
+    }
+}
+
+.playCellAnim {
+    animation-name: cellAnim;
+    animation-duration: 1s;
+    animation-fill-mode: forwards;
+}
