--- a/src/css/app.module.css
+++ b/src/css/app.module.css
@@ -43,7 +43,7 @@ body {
     --x: 300px;
     --y: 0px;
     animation-name: fadeAnim;
-    animation-duration: 1s;
+    animation-duration: 0.9s;
     animation-fill-mode: forwards;
     pointer-events:none;
 
@@ -53,7 +53,7 @@ body {
     --x:-300px;
     --y: 0px;
     animation-name: fadeAnim;
-    animation-duration: 1s;
+    animation-duration: 0.9s;
     animation-fill-mode: forwards;
     pointer-events:none;
 }
@@ -62,7 +62,7 @@ body {
     --x: 0px;
     --y: 0px;
     animation-name: fadeAnim;
-    animation-duration: 1s;
+    animation-duration: 0.9s;
     animation-fill-mode: forwards;
     pointer-events:none;
 }
@@ -81,6 +81,6 @@ body {
 
 .actionButton:hover {
     color: rgb(var(--bright-red));
-    text-decoration: underline;
     cursor: pointer;
+    transform: scale(1.1);
 }
