--- a/src/css/grid.module.css
+++ b/src/css/grid.module.css
@@ -1,14 +1,9 @@
 .grid {
-    position: absolute;
     background-color: rgb(var(--white));
-    width: 450px;
-    height: 450px;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+    /* width: 450px;
+    height: 450px; */
+    width:100%;
+    height:100%;
 }
 
 .table {
@@ -23,26 +18,18 @@
     font-size: 100px;
 }
 
-.cell p {
-    margin: 0px;
-}
-
 .gameOverMessage {
-    position: absolute;
     font-size: 64px;
     color: rgb(var(--white));
-    left: 50%;
-    top: 10%;
-    transform: translate(-50%, -50%);
-    background-color: rgb(var(--red));
     text-align: center;
+    height:100px;
 }
 
 .gameOverMessage p {
     margin: 0;
 }
 
-.gameOverMessage button {
+.restartGameButton {
     width: 200px;
     height: 50px;
     font-size: 25px;
@@ -61,4 +48,37 @@
     animation-name: cellAnim;
     animation-duration: 1s;
     animation-fill-mode: forwards;
+}
+
+.nav {
+    width:100%;
+    height: 10%;
+    text-align: center;
+}
+
+.leftDiv {
+    width:35%;
+    height:60%;
+    display: inline-block;
+    vertical-align: top;
+}
+
+.middleDiv {
+    width:30%;
+    height:60%;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.rightDiv {
+    width:35%;
+    height:60%;
+    display: inline-block;
+    vertical-align: top;
+}
+
+.footerDiv{
+    text-align: center;
+    margin-top: 20px;
 }
