--- a/src/css/grid.module.css
+++ b/src/css/grid.module.css
@@ -59,6 +59,10 @@
     animation-fill-mode: forwards;
 }
 
+.cellAnimEnd:hover{
+    transform : scale(0.9);
+}
+
 .nav {
     width:100%;
     height: 10%;
